creacion de clases datos

--- a/G3.Turnero/G3.DATA/G3.DATA.csproj
+++ b/G3.Turnero/G3.DATA/G3.DATA.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="DatosClientes.cs" />
     <Compile Include="DatosConexion.cs" />
+    <Compile Include="DatosHorarios.cs" />
+    <Compile Include="DatosPeluquero.cs" />
     <Compile Include="DatosTurnos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
