--- a/G3.Turnero/G3.CLASS/G3.CLASS.csproj
+++ b/G3.Turnero/G3.CLASS/G3.CLASS.csproj
@@ -54,9 +54,9 @@
     <Compile Include="Cliente.cs" />
     <Compile Include="Data\DataContext.cs" />
     <Compile Include="Horario.cs" />
-    <Compile Include="Migrations\202010311732455_new.cs" />
-    <Compile Include="Migrations\202010311732455_new.designer.cs">
-      <DependentUpon>202010311732455_new.cs</DependentUpon>
+    <Compile Include="Migrations\202011011609462_nueva.cs" />
+    <Compile Include="Migrations\202011011609462_nueva.designer.cs">
+      <DependentUpon>202011011609462_nueva.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Peluquero.cs" />
@@ -70,8 +70,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202010311732455_new.resx">
-      <DependentUpon>202010311732455_new.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202011011609462_nueva.resx">
+      <DependentUpon>202011011609462_nueva.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
